<resources>
    <string name="app_name">DrinkQuest</string>
    <string name="player_setup_label">Players setup</string>
    <string name="gamemode_selection_label">Gamemode selection</string>
    <string name="player_setup_name_hint">Player Name</string>
    <string name="main_button_players">Set Players</string>
    <string name="player_setup_add_player">Add Player</string>
    <string name="player_setup_randomize_roles">Randomize Roles</string>
    <string name="role_list_label">Roles</string>
    <string name="main_button_roles">See roles</string>
    <string name="role_watch_label">Role specifications</string>
    <string name="unique_role_text">This role plays unique</string>
    <string name="in_group_role_text">This role plays in group</string>
    <string name="freepik_attribution_text">(Icon credit) Birthday vector created by rawpixel.com - fr.freepik.com</string>
    <string name="main_button_gamemode_selection">Gamemode</string>
    <string name="player_setup_drinker_checkbox">drinks: </string>
    <string name="main_button_start_game">Start game</string>
    <string name="watch_role_minimum_advised_in_game_player_count">Role can be played when players are</string>
</resources>