<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button_gamemode_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_gamemode_selection">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_players">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button_roles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_roles">

    </com.google.android.material.button.MaterialButton>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/freepik_attribution_text">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="https://fr.freepik.com/vecteurs/anniversaire">

    </TextView>

</LinearLayout>